Change source layout according to JPMS